[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "venvdotapp"
author = "Glyph"
author-email = "glyph@twistedmatrix.com"
home-page = "https://github.com/glyph/venvdotapp"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"


[tool.flit.scripts]
venvdotapp = "venvdotapp:_main"
