[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "venvdotapp"
author = "Glyph"
author-email = "glyph@twistedmatrix.com"
home-page = "https://github.com/glyph/venvdotapp"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"


[tool.flit.scripts]
venvdotapp = "venvdotapp:_main"
